# wsg_port_o_e

./: README.md
101s/ci/tf/ecs/03_amazon_ecs_fullstack_app/: README.md  deploy_container.sh  run_summary.sh
101s/ci/tf/ecs/_bin/: build_c.sh  run  run_all
101s/d_net/a/eShopOnContainers_pre20/: readme.md
101s/js/ts/01/: index.html  package-lock.json  readme.md  script.js  script.ts
101s/proj/01/tales-tech-ai-agents/: .gitignore  README.md  run.sh
101s/proj/01/tales-tech-ai-agents/src/: docker-compose.yml
101s/proj/01/tales-tech-ai-agents/src/tools/research-planning/: Dockerfile  README.md  pyproject.toml
101s/proj/01/tales-tech-ai-agents/src/tools/research-planning/src/: app.py  app_routes.py  mcp_server.py
101s/proj/03/: README.md
101s/proj/03/db/: init.sql
101s/proj/03/the-job-shop/: Dockerfile  README.md  docker-compose.yml  requirements.txt
101s/proj/03/the-job-shop/core/: config.py
101s/py/core/01/basic/: README.md  main.py  requirements.txt  samples.py  samples0.py  test_samples.py
101s/py/fst/fastapi/000/: Dockerfile  README.md  docker-compose.yml
101s/py/fst/fastapi/001/: Dockerfile  README.md
101s/py/fst/fastapi/002/: Dockerfile  docker-compose.yml
101s/py/fst/fastapi/003/: README.md  docker-compose.yml
101s/py/fst/fastapi/004/: Dockerfile  docker-compose.yml  requirements.txt
101s/py/fst/fastapi/005/: test_main.py
101s/py/fst/fastapi_demo/000/: f_api.py
101s/py/fst/fastapi_demo/001/: docker-compose.yml  main.py  requirements.txt  test_main.py
101s/py/fst/fastapi_demo/002/: README.md  main.py
(+150 files in other folders)
