[project]
name = "research-planning-mcp-server"
version = "0.1.0"
description = "A working example of an MCP server for research planning."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "faker>=37.1.0"
]

[project.scripts]
start = "app:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = ["E", "F", "I", "UP", "A"]
lint.ignore = ["D203"]
